--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "@angular/platform-browser": "8.2.6",
     "@angular/platform-browser-dynamic": "8.2.6",
     "@angular/router": "8.2.6",
+    "@mapbox/mapbox-gl-geocoder": "^4.5.1",
     "@ngrx/effects": "8.3.0",
     "@ngrx/entity": "8.3.0",
     "@ngrx/router-store": "8.3.0",
     "@ngrx/store": "8.3.0",
-    "@types/mapbox-gl": "^1.10.2",
+    "@types/mapbox-gl": "1.10.2",
     "core-js": "2.6.9",
     "jasmine-core": "3.4.0",
     "jasmine-marbles": "0.5.0",
-    "mapbox-gl": "^1.1.0",
-    "ngx-mapbox-gl": "^4.5.0",
+    "mapbox-gl": "1.10.1",
+    "ngx-mapbox-gl": "4.5.0",
     "rxjs": "6.5.3",
     "tslib": "1.10.0",
     "web-animations-js": "2.3.2",
